--- a/Backend/app/rider-platform/rider-app/Main/rider-app.cabal
+++ b/Backend/app/rider-platform/rider-app/Main/rider-app.cabal
@@ -259,6 +259,7 @@ library
       Storage.Beam.SearchRequest
       Storage.Beam.SearchRequest.SearchReqLocation
       Storage.Beam.Sos
+      Storage.Beam.SosMedia
       Storage.Beam.SpecialZoneQuote
       Storage.Beam.TripTerms
       Storage.Beam.Webengage
@@ -318,6 +319,7 @@ library
       Storage.Queries.SearchRequest
       Storage.Queries.SearchRequest.SearchReqLocation
       Storage.Queries.Sos
+      Storage.Queries.SosMedia
       Storage.Queries.SpecialZoneQuote
       Storage.Queries.TripTerms
       Storage.Queries.Webengage
@@ -388,6 +390,7 @@ library
     , beam-core
     , beam-mysql
     , beam-postgres
+    , beckn-services
     , beckn-spec
     , bytestring
     , casing
@@ -489,6 +492,7 @@ executable rider-app-exe
     , beam-core
     , beam-mysql
     , beam-postgres
+    , beckn-services
     , beckn-spec
     , bytestring
     , casing
