--- a/Backend/app/provider-platform/dynamic-offer-driver-app/Main/dynamic-offer-driver-app.cabal
+++ b/Backend/app/provider-platform/dynamic-offer-driver-app/Main/dynamic-offer-driver-app.cabal
@@ -54,6 +54,7 @@ library
       API.UI
       API.UI.Call
       API.UI.CancellationReason
+      API.UI.DeviationAlert
       API.UI.Driver
       API.UI.DriverOnboarding
       API.UI.DriverProfileSummary
@@ -126,6 +127,7 @@ library
       Domain.Action.Internal.FeedbackForm
       Domain.Action.UI.Call
       Domain.Action.UI.CancellationReason
+      Domain.Action.UI.DeviationAlert
       Domain.Action.UI.Driver
       Domain.Action.UI.DriverOnboarding.AadhaarVerification
       Domain.Action.UI.DriverOnboarding.DriverLicense
