--- a/Backend/app/rider-platform/rider-app/Main/rider-app.cabal
+++ b/Backend/app/rider-platform/rider-app/Main/rider-app.cabal
@@ -86,6 +86,8 @@ library
       API.UI.Whatsapp
       App
       App.Server
+      Beckn.ACL.Bus.OnSearch
+      Beckn.ACL.Bus.Search
       Beckn.ACL.Cancel
       Beckn.ACL.Common
       Beckn.ACL.Confirm
@@ -193,6 +195,9 @@ library
       Domain.Types.Person.PersonDisability
       Domain.Types.Person.PersonFlowStatus
       Domain.Types.Person.PersonStats
+      Domain.Types.PublicTransportQuote
+      Domain.Types.PublicTransportQuote.RouteInfo
+      Domain.Types.PublicTransportQuote.Stop
       Domain.Types.Quote
       Domain.Types.Rating
       Domain.Types.RegistrationToken
@@ -201,6 +206,7 @@ library
       Domain.Types.SavedReqLocation
       Domain.Types.SearchRequest
       Domain.Types.SearchRequest.SearchReqLocation
+      Domain.Types.SearchRequest.SearchType
       Domain.Types.Sos
       Domain.Types.SpecialZoneQuote
       Domain.Types.TripTerms
@@ -262,6 +268,9 @@ library
       Storage.Beam.Person.PersonDisability
       Storage.Beam.Person.PersonFlowStatus
       Storage.Beam.Person.PersonStats
+      Storage.Beam.PublicTransportQuote
+      Storage.Beam.PublicTransportQuote.RouteInfo
+      Storage.Beam.PublicTransportQuote.Stop
       Storage.Beam.Quote
       Storage.Beam.Rating
       Storage.Beam.RegistrationToken
@@ -325,6 +334,9 @@ library
       Storage.Queries.Person.PersonDisability
       Storage.Queries.Person.PersonFlowStatus
       Storage.Queries.Person.PersonStats
+      Storage.Queries.PublicTransportQuote
+      Storage.Queries.PublicTransportQuote.RouteInfo
+      Storage.Queries.PublicTransportQuote.Stop
       Storage.Queries.Quote
       Storage.Queries.Rating
       Storage.Queries.RegistrationToken
